src/test/ui/moves/moves-based-on-type-move-out-of-closure-env-issue-1965.stderr
error[E0507]: cannot move out of `i`, a captured variable in an `Fn` closure
  --> $DIR/moves-based-on-type-move-out-of-closure-env-issue-1965.rs:9:28
   |
LL |     let i = Box::new(3);
   |         - captured outer variable
LL |     let _f = to_fn(|| test(i));
   |                    --------^-
   |                    |       |
   |                    |       move occurs because `i` has type `Box<usize>`, which does not implement the `Copy` trait
   |                    captured by this `Fn` closure

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
